# DSCI551-PROJECT

./: Li_Yutong_Project.ipynb  README.md  change_log_mongodb_app.py  pyproject.toml  realtime_mongodb_app.py  restful_server.py
templates/: index.html  index_sync.html
